--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^4.2.2"
 django-crispy-forms = "^2.0"
 django-filter = "^23.2"
 pillow = "^10.0.0"
+django-bootstrap-toolkit = "^2.15.0"
 
 
 [build-system]
